# observability_workshop

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  justfile
config/alloy/: config.alloy
config/grafana/: datasources.yaml
config/grafana/dashboards/: cache-behavior.json  cpu-profiling.json  database-connections.json  service-dependencies.json  service-overview.json  workshop-overview.json
config/grafana/provisioning/dashboards/: dashboards.yaml
config/loki/: loki-config.yaml
config/postgres/: init.sql
config/prometheus/: prometheus.yml
config/tempo/: tempo-config.yaml
docs/: observability-workshop-full-plan.md
source/: Cargo.toml  README.md  docker-compose.yaml  init-db.sql  justfile  process-compose.yaml
source/configuration/: base.yaml  dev.yaml  production.yaml  service-a.yaml  service-b.yaml  service-c.yaml  service-d.yaml
source/services/service-a/: Cargo.toml  Dockerfile
source/services/service-a/src/: app.rs  handlers.rs  lib.rs  main.rs  metrics.rs  settings.rs
source/services/service-b/: Cargo.toml  Dockerfile
source/services/service-b/migrations/: 20240101000000_init.sql  20240101000001_seed_orders.sql
source/services/service-b/src/: app.rs  handlers.rs  main.rs  settings.rs  telemetry.rs
source/services/service-c/: Cargo.toml  Dockerfile
source/services/service-c/migrations/: 20240101000000_init.sql  20240101000001_seed_products.sql
source/services/service-c/src/: app.rs  handlers.rs  lib.rs  main.rs  settings.rs
source/services/service-d/: Cargo.toml  Dockerfile
source/services/service-d/migrations/: 20240101000000_init.sql  20240101000001_seed_analytics.sql
source/services/service-d/src/: app.rs  handlers.rs  main.rs  metrics.rs  settings.rs
